--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 drivers/firefox/geckodriver.exe
 *database
 *tmp
-*scrapers/drivers/apikey
+*scrapers/drivers/moviedb.txt
 notebook.ipynb
 wandb_key.txt
 models/cb/*.pt
 models/cf/*.pth
 models/hybrid/*.pth
+app.py
