--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ wandb_key.txt
 models/cb/*.pt
 models/cf/*.pth
 models/hybrid/*.pth
+models/cb/keywords.npy
+models/cb/vocab.json
+notebooks/data-exploration/rating_correlation.csv
